--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "html-loader": "^0.5.5",
+    "markdown-loader": "^5.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
