--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
     "core-js": "^2.6.5",
     "html-loader": "^0.5.5",
     "markdown-loader": "^5.1.0",
