--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.5.0",
+    "axios": "^0.19.2",
     "core-js": "^2.6.5",
     "html-loader": "^0.5.5",
     "markdown-loader": "^5.1.0",
